# adventofcode

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/cuda-container/: devcontainer.json
.devcontainer/general-container/: Dockerfile  devcontainer.json
2023/day01/python/: day1.py  day1_tests.py  output.txt  output2.txt
2023/day01/rust/src/: main.rs  part_a.rs  part_b.rs
2023/day01/rust/tests/: day1_tests.rs
2023/day02/python/: day2.py  day2_tests.py
2023/day03/: input.txt
2023/day03/python/: day3.py  day3_tests.py
2023/day05/: Day 5 notes.md  Languages.md  README.md  input_2.txt  input_reduced.txt  input_reduced_100M.txt  input_reduced_10M.txt  input_reduced_1M.txt
2023/day05/c/: .gitignore  CMakeLists.txt  README.md  main.c
2023/day05/c++/: CMakeLists.txt  README.md  main.cpp
2023/day05/c++/config/: config.cpp  config.h
2023/day05/c++/part_a/: part_a.cpp  part_a.h
2023/day05/c++/part_a/test/: CMakeLists.txt  test_part_a.cpp
2023/day05/c++/part_b/: part_b.cpp  part_b.h
2023/day05/c++/part_b/test/: CMakeLists.txt  test_part_b.cpp
2023/day05/c++/seed_map/: seed_map.cpp  seed_map.h
2023/day05/c++/seed_map/test/: CMakeLists.txt  test_seed_map.cpp
2023/day05/c++/seed_map_layer/: seed_map_layer.cpp  seed_map_layer.h
2023/day05/c++/seed_map_layer/test/: CMakeLists.txt  test_seed_map_layer.cpp
2023/day05/c++/seed_range/: seed_range.cpp  seed_range.h
2023/day05/c++/seed_range/test/: CMakeLists.txt  test_seed_range.cpp
2023/day05/c++/utils/: utils.cpp  utils.h
2023/day05/c++/utils/test/: CMakeLists.txt  test_utils.cpp
2023/day05/c/config/: config.c  config.h
2023/day05/c/config/test/: CMakeLists.txt  test_config.c
2023/day05/c/part_a/: part_a.c  part_a.h  part_a_opencl.c  part_a_openmp.c  part_a_utils.c
2023/day05/c/part_a/test/: CMakeLists.txt  test_header_part_a.h  test_part_a.c
2023/day05/c/part_b/: part_b.c  part_b.h  part_b_opencl.c  part_b_openmp.c  part_b_utils.c
2023/day05/c/part_b/test/: CMakeLists.txt  test_part_b.c
2023/day05/c/seed_map/: seed_map.c  seed_map.h
2023/day05/c/seed_map/test/: CMakeLists.txt  test_seed_map.c
2023/day05/c/seed_map_layer/: seed_map_layer.c  seed_map_layer.h
2023/day05/c/seed_map_layer/test/: CMakeLists.txt  test_seed_map_layer.c
2023/day05/c/seed_range/: seed_range.c  seed_range.h
2023/day05/c/seed_range/test/: test_seed_range.c
2023/day05/c/utils/: utils.c  utils.h
2023/day05/c/utils/test/: test_utils.c
2023/day05/cuda/: CMakeLists.txt  README.md  a.out  launch.json  main.cu
2023/day05/cuda/config/: config.cu  config.cuh
2023/day05/cuda/experiments/min_value/: CMakeLists.txt  main.cu
2023/day05/cuda/part_a/: part_a.cu  part_a.cuh
2023/day05/cuda/part_a/manualtest/: CMakeLists.txt  main.cu
2023/day05/cuda/part_a/test/: CMakeLists.txt  test_part_a.cu
2023/day05/cuda/part_b/: part_b.cu  part_b.cuh
2023/day05/cuda/part_b/test/: CMakeLists.txt  test_part_b.cu
2023/day05/cuda/seed/: seed.cu  seed.cuh
2023/day05/cuda/seed/test/: CMakeLists.txt  test_seed.cu
2023/day05/cuda/seed_map/: seed_map.cu  seed_map.cuh
2023/day05/cuda/seed_map/test/: CMakeLists.txt  test_seed_map.c  test_seed_map.cu
2023/day05/cuda/seed_map_layer/: seed_map_layer.cu  seed_map_layer.cuh
2023/day05/cuda/seed_map_layer/test/: CMakeLists.txt  test_seed_map_layer.cu
2023/day05/cuda/seed_range/: seed_range.cu  seed_range.cuh
2023/day05/cuda/seed_range/test/: CMakeLists.txt  test_seed_range.cu
2023/day05/cuda/utils/: utils.cu  utils.cuh
2023/day05/cuda/utils/test/: CMakeLists.txt  test_utils.cu
2023/day05/docs/: Day 5 notes.md  Languages.md  problem.md
2023/day05/f_sharp/: README.md  f_sharp.sln
2023/day05/f_sharp/app_code/: Mapping.fs  MappingLayer.fs  Program.fs  SeedRange.fs  app_code.fsproj
2023/day05/f_sharp/tests/: MappingLayerTests.fs  MappingTests.fs  SeedRangeTests.fs  SeedTests.fs  tests.fsproj
2023/day05/go/: README.md  go.mod  main.go
2023/day05/go/seed_map/: seed_map.go  seed_map_test.go
2023/day05/go/seed_map_layer/: seed_map_layer.go
2023/day05/go/seed_map_layers/: seed_map_layers.go
2023/day05/go/src/: main.go
2023/day05/python/: README.md  day5.py  day5_classes.py  day5_classes_tests.py  day5_experiments.py  day5_parallel.py  day5_ranges.py  day5_tests.py  experiment.py  experiment_tests.py  pyproject.toml
2023/day05/python/src/: day5.py  day5_classes.py  day5_classes_tests.py  day5_parallel.py  day5_ranges.py  day5_ranges_tests.py
2023/day05/rust/: Cargo.toml  README.md
2023/day05/rust/src/: day5.rs  lib.rs  main.rs
2023/day05/rust/src/part_a/: mod.rs
2023/day05/rust/src/part_b/: mod.rs
2023/day05/rust/src/seed/: mod.rs
2023/day05/rust/src/seed_map/: mod.rs
2023/day05/rust/src/seed_map_layer/: mod.rs
2023/day05/rust/src/seed_range/: mod.rs
2023/day05/zig/: .gitignore  README.md  build.zig  build.zig.zon  read_file.zig
experiments/func_split_range/: Cargo.toml
experiments/func_split_range/src/: main.rs
experiments/injest_file/: main.c
experiments/opencl/example1/: HelloOpenCL
experiments/package_layout/: Cargo.toml
experiments/package_layout/src/: lib.rs  main.rs
experiments/python_rewrite/: main.py
experiments/python_rewrite/part_a/: part_a.py
experiments/python_rewrite/part_b/: part_b.py
experiments/python_rewrite/seed_map/: seed_map.py
experiments/python_rewrite/seed_map_layer/: seed_map_layer.py
experiments/python_rewrite/seed_range/: seed_range.py
experiments/reorg_seed_ranges/: Cargo.toml
experiments/reorg_seed_ranges/src/: main.rs  seed_range.rs
experiments/reorg_seed_ranges_rust/: Cargo.toml
experiments/reorg_seed_ranges_rust/src/: seed_range.rs
experiments/rust_pointer/: Cargo.toml
experiments/rust_pointer/src/: main.rs
experiments/zig_array_sharing/: build.zig  build.zig.zon
experiments/zig_array_sharing/src/: main.zig
experiments/zig_build/: build.zig  build.zig.zon
experiments/zig_build/src/: main.zig
experiments/zig_file_read/: build.zig  build.zig.zon
experiments/zig_file_read/src/: main.zig
temp/: experiment1.py  experiment_tests.py
(+23 files in other folders)
