[project]
name = "day5"
version = "0.1.0"
description = ""
authors = [
    {name = "Rich Clubb",email = "rich.clubb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "day5", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
